--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,15 @@
   "author": "Riccardo Pogliacomi",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^7.0.0",
+    "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.0.2",
+    "socket-io": "^1.0.0",
     "winston": "^3.17.0"
   }
 }
